# advanced-computer-vision

./: .gitignore  Ai.py  Hos.py  all.jsonl  pyproject.toml
mediapipe_impl/face_mesh/: FaceMeshMin.py  FaceMeshModule.py
mediapipe_impl/hand_track/: HandTrackingMin.py  HandTrackingModule.py
mediapipe_impl/pose_estimation/: Pose.py  PoseEstimationMin.py  PoseEstimationModule.py
notebooks/: pose_mediapipe_cnn.ipynb
paper/: .gitignore  main.tex  preamble.tex
paper/contents/: req.tex  s1.tex  s2-backend.tex
tests/: DoubleCameraTest.py
utils/: fake.py
